--- a/styles.css
+++ b/styles.css
@@ -10,23 +10,34 @@ body{
     padding: 0;
 }
 header{
-    background-color: black;
+    display: block;
     padding: 20px;
-    color:white ;
-    text-align: center;
-    position: sticky;
+    color: white;
+    position: relative;
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 1000;
+
+}
+#menu{
+    display: none;
+}
+.menu-icon{
+    cursor: pointer;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+}
+.menu-icon img{
+    width: 50px;
+    height: auto;
 }
 nav{
-    display: flex;
+    display: none;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 nav ul{
-    background-color: black;
     white-space: nowrap;
     max-width: 1000px;
     padding: 10px;
@@ -43,8 +54,12 @@ nav li{
 nav a{
     font-size: inherit;
     padding: 10px;
-    color:rgb(202, 190, 190);
+    color: black;
     text-decoration: none;
+}
+nav a:hover{
+    background-color: black;
+    color: white;
 }
 .banner{
     display: grid;
@@ -53,7 +68,8 @@ nav a{
     margin-left: 20px;
 }
 .banner h1{
-    font-size: 53px;
+    margin-top: 0;
+    font-size: 70px;
     text-align: center;
 }
 .banner p{
@@ -132,6 +148,7 @@ img{
     display: inline-block;
     padding: 12px 24px;
     background-color:black;
+    font-weight: bold;
     color: #fff;
     text-decoration: none;
     border-radius: 4px;
@@ -139,7 +156,8 @@ img{
     transition: 1s;
 }
 .cta-button:hover{
-    background-color: #5e4e4e;
+    background-color: rgb(202, 190, 190);
+    color: black;
 }
 .pricing{
     position: relative;
@@ -175,35 +193,45 @@ footer{
     top: 1000px;
     font-size: 18px;
 }
-@media screen and (max-width: 1500px){
+@media screen and (max-width: 1475px){
+ .Feature{
+    top: 200px;
+ }
+ .pricing{
+    top: 200px;
+ }
+} 
+@media screen and (max-width: 1200px){
+.Feature{
+    top: 30px;
+}
+.pricing{
+    top: 40px;
+}
+}  
+
+@media screen and (max-width: 768px){
 header{
-    display: flex;
-    max-width: 100%;
+    flex-direction: column;
+    align-items: center;
 }
 nav{
-    flex: 1 0 100px;
-    justify-content: flex-start;
-}
-}
-@media screen and (max-width: 1300px){
-nav{
-    display: flex;
+    margin-top: 20px;
 }
 nav ul{
-    list-style: none;
-    padding: 0;
+    flex-direction: column;
+    align-items: center;
 }
-nav a{
-    grid-column: span 2;
-}
-}
-@media screen and (max-width: 768px){
 nav li{
-    display: block;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 nav a{
-    display: block;
-    padding: 10px;
+    font-size: 16px;
+}
+.Feature{
+    top: 10px;
+}
+.pricing{
+    top: 20px;
 }
 }
